--- a/index.html
+++ b/index.html
@@ -9,50 +9,88 @@
 </head>
 
 <body>
-    <ul id="categories">
-        <li class="item">
-            <h2>Животные</h2>
+    <div class="task">
+        <ul id="categories">
+            <li class="item">
+                <h2>Животные</h2>
 
-            <ul>
-                <li>Кот</li>
-                <li>Хомяк</li>
-                <li>Лошадь</li>
-                <li>Попугай</li>
-            </ul>
-        </li>
-        <li class="item">
-            <h2>Продукты</h2>
+                <ul>
+                    <li>Кот</li>
+                    <li>Хомяк</li>
+                    <li>Лошадь</li>
+                    <li>Попугай</li>
+                </ul>
+            </li>
+            <li class="item">
+                <h2>Продукты</h2>
 
-            <ul>
-                <li>Хлеб</li>
-                <li>Петрушка</li>
-                <li>Творог</li>
-            </ul>
-        </li>
-        <li class="item">
-            <h2>Технологии</h2>
+                <ul>
+                    <li>Хлеб</li>
+                    <li>Петрушка</li>
+                    <li>Творог</li>
+                </ul>
+            </li>
+            <li class="item">
+                <h2>Технологии</h2>
 
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>React</li>
-                <li>Node</li>
-            </ul>
-        </li>
-    </ul>
-    <ul id="ingredients"></ul>
-    <ul id="gallery"></ul>
-    <div id="counter">
-        <button type="button" data-action="decrement">-1</button>
-        <span id="value">0</span>
-        <button type="button" data-action="increment">+1</button>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>React</li>
+                    <li>Node</li>
+                </ul>
+            </li>
+        </ul>
+
+        <ul id="ingredients"></ul>
+    </div>
+
+    <div class="task">
+        <ul id="gallery"></ul>
+    </div>
+
+    <div class="task">
+        <div id="counter">
+            <button type="button" data-action="decrement">-1</button>
+            <span id="value">0</span>
+            <button type="button" data-action="increment">+1</button>
+        </div>
+    </div>
+
+    <div class="task">
+        <input type="text" placeholder="Ваше имя?" id="name-input" />
+        <h1>Привет, <span id="name-output"></span>!</h1>
+    </div>
+
+    <div class="task">
+        <input type="text" id="validation-input" data-length="6" placeholder="Введи 6 символов" />
+    </div>
+
+    <div class="task">
+        <input id="font-size-control" type="range" />
+        <br />
+        <span id="text">Абракадабра!</span>
+    </div>
+
+    <div class="task">
+        <div id="controls">
+            <input type="number" min="0" max="100" step="1" />
+            <button type="button" data-action="render">Создать</button>
+            <button type="button" data-action="destroy">Очистить</button>
+        </div>
+
+        <div id="boxes"></div>
     </div>
 
     <script src="task1.js" type="module"></script>
     <script src="task2.js" type="module"></script>
     <script src="task3.js" type="module"></script>
     <script src="task4.js" type="module"></script>
+    <script src="task5.js" type="module"></script>
+    <script src="task6.js" type="module"></script>
+    <script src="task7.js" type="module"></script>
+    <script src="task8.js" type="module"></script>
     <!-- <script src="task4.js" type="module"></script> -->
 </body>
 
